fix: layout issues fixes

--- a/src/app/components/about-chiawei-figure/about-chiawei-figure.component.scss
+++ b/src/app/components/about-chiawei-figure/about-chiawei-figure.component.scss
@@ -1,41 +1,74 @@
 .about-chiawei {
   position: relative;
-  height: 500px;
+  height: 300px;
   width: 100%;
-  /* overflow: hidden; */
+  display:flex;
+  justify-content:end;
+  align-items:end;
+  padding:20px;
 
-  .text-area {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-  }
-
-  img {
-    position: absolute;
-    right: 38px;
-    top: 50px;
-    height: 441px;
-    width: 506.02px;
-    pointer-events: none;
-  }
-
-  .figure-wrapper {
-    width: 100%;
-    height: 100%;
-  }
-
-  .figure {
-    position: absolute;
-    top: 35%;
-    left: 35%;
-    transform: translate(-50%, -50%);
-    display: block;
-    height: calc(100% - 20px);
-    width: calc(100% - 20px);
+  @media(min-width:992px){
+    height:500px
   }
 
   .figure-wrapper {
     position: relative;
+    bottom:0;
+    right:0;
 
+      .text-area{
+        min-width:200px;
+
+        @media(min-width:992px){
+          min-width:300px
+        }
+
+      }
+
+      img {
+        position: absolute;
+        bottom:220%;
+        right: 112%;
+        transform: translate(50%, 50%);
+        aspect-ratio:441/372;
+        width:  150%;
+        height: auto;
+        pointer-events: none;
+
+        @media(min-width:992px){
+          bottom:190%;
+          right: 108%;
+          width: 95%;
+          height: auto;
+        }
+
+        @media(min-width:1000px){
+          bottom:190%;
+          right: 110%;
+          width:100%;
+          height: auto;
+        }
+
+        @media(min-width:1100px){
+          bottom:190%;
+          right: 110%;
+          width:calc(100% * 1.2);
+          height: auto;
+        }
+
+        @media(min-width:1200px){
+          bottom:200%;
+          right: 115%;
+          width:calc(100% * 1.5);
+          height: auto;
+        }
+
+        @media(min-width:1300px){
+          bottom:230%;
+          right: 115%;
+          width:calc(100% * 2);
+          height: auto;
+        }
+      }
   }
 }
