--- a/src/app/components/about-hi-world-description/about-hi-world-description.component.scss
+++ b/src/app/components/about-hi-world-description/about-hi-world-description.component.scss
@@ -9,11 +9,15 @@
     position: absolute;
     top: -100px;
     right: -10px;
+    z-index:-1;
+    pointer-events:none;
   }
 
   .paws {
     position: absolute;
     right: 80px;
     bottom: -70px;
+    z-index:-1;
+    pointer-events:none;
   }
 }
